substrate/primitives/runtime/proc-macro/tests/ui/wrong_input6.stderr
error: unexpected token
  --> tests/ui/wrong_input6.rs:20:68
   |
20 | #[with_features_try_runtime_and_runtime_benchmarks(feature = "std" foo)]
   |                                                                    ^^^
